--- a/templates/card.html
+++ b/templates/card.html
@@ -5,8 +5,27 @@
     <title>Flash Card</title>
 </head>
 <body>
-    <h1>Flash Card</h1>
+<h1>Flash Card</h1>
     Question: {{ card.question }} <br>
     Answer: {{ card.answer }}
+    <p>
+        <a href="{{ url_for('welcome') }}"> Home</a>
+        <button>
+            {% if index < max_index %}
+            <a href="{{ url_for( 'card_view', index=index + 1 )}}">
+                Next Card
+            </a>
+            {% else %}
+            <a href="{{ url_for( 'card_view', index=0 )}}">
+                Next Card
+            </a>
+            {% endif %}
+        </button>
+    </p>
+    <p>
+        <a href="{{ url_for('remove_card', index=index) }}">
+            Remove
+        </a>
+    </p>
 </body>
 </html>
