--- a/templates/project.html
+++ b/templates/project.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Project</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %} All Projects {% endblock %}
+{% block content %}
+
 <h2>Project Details</h2>
 <table style="width:50%">
     <tr>
@@ -24,5 +21,6 @@
     <input type="file" id="upload"/>
 </p>
 
-</body>
-</html>
+{% endblock %}
+
+
