--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Project</title>
-</head>
-<body>
-<h1>Project</h1>
-
+{% extends "base.html" %}
+{% block title %} All Projects {% endblock %}
+{% block content %}
 <a href="{{ url_for('add_project') }}"> Add</a>
 <table style="width:50%">
     <tr>
@@ -25,5 +19,5 @@
     {% endfor %}
 </table>
 
-</body>
-</html>
+{% endblock %}
+
