Add project form

--- a/templates/card.html
+++ b/templates/card.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Flash Card</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %} All Projects {% endblock %}
+{% block content %}
 <h1>Flash Card</h1>
     Question: {{ card.question }} <br>
     Answer: {{ card.answer }}
@@ -27,5 +23,4 @@
             Remove
         </a>
     </p>
-</body>
-</html>
+{% endblock %}
