--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Welcome to my page!</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %} All Projects {% endblock %}
+{% block content %}
     <h1>Welcome to my page!</h1>
     <p>
         This is the demo app
@@ -23,5 +20,4 @@
         {% endfor %}
     </ul>
 
-</body>
-</html>
+{% endblock %}
