--- a/templates/projects.html
+++ b/templates/projects.html
@@ -13,7 +13,7 @@
         <td><a href="{{ url_for('project', index=emp.id) }}">{{ emp.id }}</a></td>
         <td>{{ emp.code }}</td>
         <td>{{ emp.name }}</td>
-        <td><a href="{{ url_for('remove_project', index=emp.id) }}"> delete</a>
+        <td><a href="{{ url_for('del_project', index=emp.id) }}"> delete</a>
         </td>
     </tr>
     {% endfor %}
