--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %} All Projects {% endblock %}
 {% block content %}
-<a href="{{ url_for('add_project') }}"> Add</a>
-<table style="width:50%">
+<a href="{{ url_for('add_project') }}"> <button class="btn btn-info">Add Project</button></a>
+<table class="table" style="width:50%">
     <tr>
         <th>ID</th>
         <th>Jur</th>
@@ -14,6 +14,7 @@
         <td>{{ emp.code }}</td>
         <td>{{ emp.name }}</td>
         <td><a href="{{ url_for('del_project', index=emp.id) }}"> delete</a>
+        <td><a href="#"> Send Email</a>
         </td>
     </tr>
     {% endfor %}
