--- a/templates/project.html
+++ b/templates/project.html
@@ -18,9 +18,13 @@
     </tr>
 </table>
 <br>
-<p>
-    <input type="file" id="upload"/>
-</p>
+<div>
+<form id="upload-form" action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" multiple>
+    <input type="submit" value="upload">
+</form>
+
+</div>
 
 {% endblock %}
 
