--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,25 @@
 {% extends "base.html" %}
 {% block title %} All Projects {% endblock %}
 {% block content %}
-    <h1>Welcome to OCM Tracker!</h1>
-    <p>
-        This is the demo app
-        <em>Getting Started with Flask</em>
-        on <a href="https://pluralsight.com">Pluralsight</a>
-    </p>
-        <div>
-            <h2>Aerostructures</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
+<h1>Welcome to OCM Tracker!</h1>
+<p>
+    This is the demo app
+    <em>About</em>
+    on <a href="https://pluralsight.com">OCM Tracker</a>
+</p>
+<div>
+    <h2>About</h2>
+    <p>A small business offering Civil Engineering services. They have 15- 20 clients of different sizes.
+        It employs 15-20 employees, 8 of them are Civil engineers while 6 works in the field. The
+        Engineers work in the office on data analysis and calculations and the workers in the field use
+        that information to perform different tasks. The workload is tracked and assigned using SS and
+        several operations tasks/communications are done via email threads. The company is unable to
+        easily keep track of projects due dates, resources bottlenecks or even employee
+        efficiencies/productivity. The team manager spends the majority of the time following up on
+        different tasks as well as resource management. The company is growing and the current manual
+        processes are not sustainable nor are they efficient. </p>
+    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+</div>
 
 
 {% endblock %}
