remove ref to card templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,8 @@
 <h1>Welcome to OCM Tracker!</h1>
 <p>
     This is the demo app
-    <em>About</em>
-    on <a href="https://pluralsight.com">OCM Tracker</a>
+    <em>for</em>
+    <a href="https://pluralsight.com">OCM Tracker</a>
 </p>
 <div>
     <h2>About</h2>
