--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -31,6 +31,7 @@
                 <div class="navbar-nav">
                     {% if current_user.is_authenticated %}
                         <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        <a class="nav-item nav-link" href="{{ url_for('add_project') }}">New Project</a>
                         <a class="nav-item nav-link" href="{{ url_for('projects') }}">Projects</a>
                     {% else %}
                         <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
