--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -6,16 +6,19 @@
 <br><br>
 <table class="table table-dark" >
     <tr>
-        <th>ID</th>
-        <th>Jur</th>
-        <th>Name</th>
+        <th>Code</th>
+        <th>Client</th>
+        <th>County</th>
+        <th>municipality</th>
     </tr>
-    {% for emp in employees %}
+    {% for project in projects %}
     <tr>
-        <td><a href="{{ url_for('project', index=emp.id) }}">{{ emp.id }}</a></td>
-        <td>{{ emp.code }}</td>
-        <td>{{ emp.name }}</td>
-        <td><a href="{{ url_for('del_project', index=emp.id) }}"> delete</a>
+<!--        <td><a href="{{ url_for('project', index=project.id) }}">{{ project.id }}</a></td>-->
+        <td><a href="#"> {{ project.code }}</a></td>
+        <td>{{ project.client }}</td>
+        <td>{{ project.county }}</td>
+        <td>{{ project.municipality }}</td>
+        <td><a href="{{ url_for('del_project', index=project.id) }}"> delete</a>
         <td><a href="#"> Send Email</a>
         </td>
     </tr>
