--- a/tracker/templates/example.html
+++ b/tracker/templates/example.html
@@ -4,7 +4,7 @@
 
 <select name="client" id="client"  >
 
-    {% for client in clients.keys() %}
+    {% for client in clients %}
 
     <option value="{{client}}" {% if client == selected %} selected="{{ selected }}" {% endif %}>{{client}}</option>
 
@@ -16,7 +16,7 @@
 <form method="POST" action="">
     {{ form.hidden_tag() }}
 
-        {% for field in form %}
+        {% for field in form if field.widget.input_type != 'hidden' %}
         <div class="form-group">
 
             {% if field.type != 'SubmitField' %}
@@ -33,7 +33,7 @@
 <script>
     let select_client = document.getElementById('client');
     select_client.onchange = function(){
-        client = select_client.value;
+        var client = select_client.value;
 <!--        window.location = "{{ url_for('example', name='Comcast') }}";-->
         window.location = "http://localhost:5000/example" +"/"+client;
 
