--- a/tracker/templates/example.html
+++ b/tracker/templates/example.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} All Projects {% endblock %}
+{% block title %} Example {% endblock %}
 {% block content %}
 
 <select name="client" id="client"  >
