--- a/tracker/templates/add_project.html
+++ b/tracker/templates/add_project.html
@@ -1,43 +1,48 @@
 {% extends "base.html" %}
+{% block title %} Add Project {% endblock %}
 {% block content %}
-    <div class="content-section">
-        <form method="POST" action="">
-            {{ form.hidden_tag() }}
-            <fieldset class="content-section">
-                <legend class="border-bottom mb-4">Project Details</legend>
-<!--                <div class="form-group">-->
 
-<!--                    {{ form.client.label(class="form-control-label") }}-->
-<!--                    <select name="client">-->
+<select name="client" id="client"  >
 
-<!--                        {% for client in clients %}-->
-<!--                        <option value={{ form.client(class="form-control  form-control-lg") }} > {{ client }}</option>-->
-<!--                        {% endfor %}-->
-<!--                    </select>-->
-<!--                </div>-->
+    {% for client in clients %}
 
-                <div class="form-group">
-                    {{ form.code.label(class="form-control-label") }}
-                    {{ form.code(class="form-control  form-control-lg") }}
-                </div>
-                <div class="form-group">
-                    {{ form.client.label(class="form-control-label") }}
-                    {{ form.client(class="form-control  form-control-lg") }}
-                </div>
-                <div class="form-group">
-                    {{ form.county.label(class="form-control-label") }}
-                    {{ form.county(class="form-control  form-control-lg") }}
-                </div>
-                <div class="form-group">
-                    {{ form.municipality.label(class="form-control-label") }}
-                    {{ form.municipality(class="form-control  form-control-lg") }}
-                </div>
-            </fieldset>
-            <div class="form-group">
-                    {{ form.submit(class="btn btn-outline-info") }}
-            </div>
-        </form>
-    </div>
+    <option value="{{client}}" {% if client == selected %} selected="{{ selected }}" {% endif %}>{{client}}</option>
+
+    {% endfor %}
+
+</select>
 
 
-{% endblock content %}
+<form method="POST" action="">
+    {{ form.hidden_tag() }}
+
+        {% for field in form if field.widget.input_type != 'hidden' %}
+        <div class="form-group">
+
+            {% if field.type != 'SubmitField' %}
+                {{ field.label(class="form-control-label") }}
+                {{ field(class="form-control  form-control-lg") }}
+            {% else %}
+                {{ field(class="btn btn-outline-info") }}
+            {% endif %}
+        </div>
+        {% endfor %}
+
+</form>
+
+<script>
+    let select_client = document.getElementById('client');
+    select_client.onchange = function(){
+        var client = select_client.value;
+        window.location = "http://localhost:5000/add_project" +"/"+client;
+
+    }
+</script>
+
+
+
+
+{% endblock %}
+
+
+
