--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -26,6 +26,7 @@
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
                     <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
+                    <a class="nav-item nav-link" href="#">Services</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
@@ -37,6 +38,8 @@
                         <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                         <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
                     {% endif %}
+                    <a class="nav-item nav-link" href="#">Careers</a>
+
                 </div>
             </div>
         </div>
