--- a/tracker/templates/add_project.html
+++ b/tracker/templates/add_project.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block title %} Add Project {% endblock %}
 {% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
 
 <select name="client" id="client"  >
-
     {% for client in clients %}
-
     <option value="{{client}}" {% if client == selected %} selected="{{ selected }}" {% endif %}>{{client}}</option>
-
     {% endfor %}
-
 </select>
 
 
@@ -40,7 +40,10 @@
 </script>
 
 
-
+        </div>
+          <div class="col-2"></div>
+    </div>
+</div>
 
 {% endblock %}
 
