--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -15,7 +15,7 @@
 <body>
 
 <header class="site-header">
-    <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+    <nav class="navbar navbar-expand-md navbar-dark bg-secondary fixed-top">
         <div class="container">
             <a class="navbar-brand mr-4" href="/">OCM Tracker</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
@@ -57,6 +57,7 @@
     {% endwith %}
     {% block content %}
     {% endblock %}
+
 </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
