--- a/tracker/templates/login.html
+++ b/tracker/templates/login.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
+
+<div class="container">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
+
     <div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
@@ -54,4 +60,10 @@
             Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up now</a>
         </small>
     </div>
+
+
+        </div>
+          <div class="col-2"></div>
+    </div>
+</div>
 {% endblock content %}
