--- a/tracker/templates/register.html
+++ b/tracker/templates/register.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
+
+<div class="container">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
     <div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
@@ -33,4 +38,9 @@
             Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
         </small>
     </div>
+
+        </div>
+          <div class="col-2"></div>
+    </div>
+</div>
 {% endblock content %}
