--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -26,7 +26,7 @@
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
                     <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
-                    <a class="nav-item nav-link" href="#">Services</a>
+                    <a class="nav-item nav-link" href="{{ url_for('services') }}">Services</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
@@ -38,7 +38,7 @@
                         <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                         <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
                     {% endif %}
-                    <a class="nav-item nav-link" href="#">Careers</a>
+                    <a class="nav-item nav-link" href="{{ url_for('careers') }}">Careers</a>
 
                 </div>
             </div>
