--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -4,7 +4,7 @@
 
 <a href="{{ url_for('add_project') }}"> <button class="btn btn-info">Add Project</button></a>
 <br><br>
-<table class="table table-dark" >
+<table class="table table-dark table-bordered" >
     <tr>
         <th>Client</th>
         <th>Case</th>
@@ -19,6 +19,25 @@
     </tr>
     {% endfor %}
 </table>
+
+       <div>
+            <nav arial-label="Chapter Links">
+                <ul class="pagination justify-content-end">
+                    <li class="page-item"><a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">Previous</span>
+                    </a></li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
+                    </a></li>
+
+                </ul>
+            </nav>
+        </div>
 
 {% endblock %}
 
