--- a/tracker/templates/services.html
+++ b/tracker/templates/services.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Services Page</h1>
+
+<p>Example of service page</p>
+
 
 {% endblock content %}
