--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -8,13 +8,14 @@
     <tr>
         <th>Client</th>
         <th>Case</th>
+        <th>Created</th>
     </tr>
     {% for project in all_projects %}
     <tr>
         <td>{{ project['client'] }}</td>
         <td><a href="{{ url_for('project', case=project['case']) }}"> {{ project['case'] }}</a></td>
+        <td> 02/09/2019</td>
         <td><a href="{{ url_for('del_project', case=project['case'])}}"> delete</a>   <!--  del_project/case -->
-        <td><a href="#"> Send Email</a>
         </td>
     </tr>
     {% endfor %}
@@ -23,14 +24,17 @@
        <div>
             <nav arial-label="Chapter Links">
                 <ul class="pagination justify-content-end">
-                    <li class="page-item"><a class="page-link" href="#" aria-label="Previous">
+                    <li  class="page-item {% if page == 1 %} disabled {% endif %}"><a class="page-link" href="{{ url_for('projects', page=(page-1)) }}" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                         <span class="sr-only">Previous</span>
                     </a></li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#" aria-label="Next">
+
+                    {% for i in range(page,page+3, 1) %}
+                    <li class="page-item {% if page == i %} active {% endif %}"><a class="page-link" href="{{ url_for('projects', page=i) }}">{{ i }}</a></li>
+                    {% endfor %}
+<!--                    <li class="page-item"><a class="page-link" href="{{ url_for('projects', page=2) }}">2</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="{{ url_for('projects', page=3) }}">3</a></li>-->
+                    <li class="page-item"><a class="page-link" href="{{ url_for('projects', page=(page+1)) }}" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                     </a></li>
