--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -29,12 +29,12 @@
                         <span class="sr-only">Previous</span>
                     </a></li>
 
-                    {% for i in range(page,page+3, 1) %}
+                    {% for i in range(begin,begin+3, 1) %}
                     <li class="page-item {% if page == i %} active {% endif %}"><a class="page-link" href="{{ url_for('projects', page=i) }}">{{ i }}</a></li>
                     {% endfor %}
 <!--                    <li class="page-item"><a class="page-link" href="{{ url_for('projects', page=2) }}">2</a></li>-->
 <!--                    <li class="page-item"><a class="page-link" href="{{ url_for('projects', page=3) }}">3</a></li>-->
-                    <li class="page-item"><a class="page-link" href="{{ url_for('projects', page=(page+1)) }}" aria-label="Next">
+                    <li class="page-item {% if (begin+2) == end %} disabled {% endif %}"><a class="page-link" href="{{ url_for('projects', page=(page+1)) }}" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                     </a></li>
