--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -14,7 +14,7 @@
     <tr>
         <td>{{ project['client'] }}</td>
         <td><a href="{{ url_for('project', case=project['case']) }}"> {{ project['case'] }}</a></td>
-        <td> 02/09/2019</td>
+        <td> {{ project['created_at'].strftime('%m/%d/%Y %H:%M:%S') }}</td>
         <td><a href="{{ url_for('del_project', case=project['case'])}}"> delete</a>   <!--  del_project/case -->
         </td>
     </tr>
@@ -29,11 +29,9 @@
                         <span class="sr-only">Previous</span>
                     </a></li>
 
-                    {% for i in range(begin,begin+3, 1) %}
+                    {% for i in range(begin,end+1, 1) %}
                     <li class="page-item {% if page == i %} active {% endif %}"><a class="page-link" href="{{ url_for('projects', page=i) }}">{{ i }}</a></li>
                     {% endfor %}
-<!--                    <li class="page-item"><a class="page-link" href="{{ url_for('projects', page=2) }}">2</a></li>-->
-<!--                    <li class="page-item"><a class="page-link" href="{{ url_for('projects', page=3) }}">3</a></li>-->
                     <li class="page-item {% if (begin+2) == end %} disabled {% endif %}"><a class="page-link" href="{{ url_for('projects', page=(page+1)) }}" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
