--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -7,13 +7,13 @@
 <table class="table table-dark table-bordered" >
     <tr>
         <th>Client</th>
-        <th>Case</th>
+        <th>Project #</th>
         <th>Created</th>
     </tr>
     {% for project in all_projects %}
     <tr>
         <td>{{ project['client'] }}</td>
-        <td><a href="{{ url_for('project', case=project['case']) }}"> {{ project['case'] }}</a></td>
+        <td><a href="{{ url_for('project', case=project['Project #']) }}"> {{ project['Project #'] }}</a></td>
         <td> {{ project['created_at'].strftime('%m/%d/%Y %H:%M:%S') }}</td>
         <td><a href="{{ url_for('del_project', case=project['case'])}}"> delete</a>   <!--  del_project/case -->
         </td>
