--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -24,13 +24,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-                    <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
+                    <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
+                    <a class="nav-item nav-link" href="{{ url_for('main.account') }}">Account</a>
 
                     <div class="btn-group">
                         <div class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">Services</div>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="{{ url_for('services') }}">Service 1</a>
+                            <a class="dropdown-item" href="{{ url_for('main.services') }}">Service 1</a>
                             <a class="dropdown-item" href="#">Service 2</a>
                         </div>
                     </div>
@@ -39,14 +39,14 @@
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
                     {% if current_user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
-                        <a class="nav-item nav-link" href="{{ url_for('add_project') }}">New Project</a>
-                        <a class="nav-item nav-link" href="{{ url_for('projects') }}">Projects</a>
+                        <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
+                        <a class="nav-item nav-link" href="{{ url_for('projects.add_project') }}">New Project</a>
+                        <a class="nav-item nav-link" href="{{ url_for('projects.get_projects') }}">Projects</a>
                     {% else %}
-                        <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                        <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                        <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
+                        <a class="nav-item nav-link" href="{{ url_for('users.register') }}">Register</a>
                     {% endif %}
-                    <a class="nav-item nav-link" href="{{ url_for('careers') }}">Careers</a>
+                    <a class="nav-item nav-link" href="{{ url_for('main.careers') }}">Careers</a>
 
                 </div>
             </div>
