--- a/tracker/templates/login.html
+++ b/tracker/templates/login.html
@@ -50,14 +50,14 @@
                     {{ form.submit(class="btn btn-outline-info") }}
             </div>
             <small class="text-muted ml-2">
-                <a href="{{ url_for('reset_request') }}">Forgot password?</a>
+                <a href="{{ url_for('users.reset_request') }}">Forgot password?</a>
             </small>
         </form>
     </div>
 
     <div class="border-top pt-3">
         <small class="text-muted">
-            Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up now</a>
+            Need An Account? <a class="ml-2" href="{{ url_for('users.register') }}">Sign Up now</a>
         </small>
     </div>
 
