--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -40,7 +40,7 @@
                 <div class="navbar-nav">
                     {% if current_user.is_authenticated %}
                         <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
-                        <a class="nav-item nav-link" href="{{ url_for('projects.add_project') }}">New Project</a>
+                        <a class="nav-item nav-link" href="{{ url_for('projects.example') }}">Example</a>
                         <a class="nav-item nav-link" href="{{ url_for('projects.get_projects') }}">Projects</a>
                     {% else %}
                         <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
