--- a/tracker/templates/example.html
+++ b/tracker/templates/example.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block title %} Example {% endblock %}
 {% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
 
 <select name="client" id="client"  >
-
     {% for client in clients %}
-
     <option value="{{client}}" {% if client == selected %} selected="{{ selected }}" {% endif %}>{{client}}</option>
-
     {% endfor %}
-
 </select>
 
 
@@ -30,20 +30,20 @@
 
 </form>
 
-<script>
-    let select_client = document.getElementById('client');
-    select_client.onchange = function(){
-        var client = select_client.value;
-<!--        window.location = "{{ url_for('example', name='Comcast') }}";-->
-        window.location = "http://localhost:5000/example" +"/"+client;
-
-    }
-</script>
 
 
+<!--<script>-->
+<!--    let select_client = document.getElementById('client');-->
+<!--    select_client.onchange = function(){-->
+<!--        var client = select_client.value;-->
+<!--&lt;!&ndash;        window.location = "{{ url_for('projects.example', name='Comcast') }}";&ndash;&gt;-->
+<!--        window.location = "http://localhost:5000/example" +"/"+client;-->
 
+<!--    }-->
+<!--</script>-->
 
+        </div>
+        <div class="col-2"></div>
+    </div>
+</div>
 {% endblock %}
-
-
-
