--- a/tracker/templates/project.html
+++ b/tracker/templates/project.html
@@ -27,11 +27,11 @@
                 </tr>
             </table>
             <br>
-            <div>
+            <div class="form-group">
                 <form id="upload-form" action="{{ url_for('main.upload', case=case) }}" method="post"
                       enctype="multipart/form-data">
-                    <input type="file" name="file" multiple>
-                    <input type="submit" value="upload" class="btn btn-success">
+                    <input class="form-control-file btn btn-light" type="file" name="file" multiple>
+                    <input type="submit" value="upload" class="btn btn-success mt-5">
                 </form>
             </div>
         </div>
@@ -39,19 +39,19 @@
 </div>
 
 <br><br>
-<di>
-    <form method="POST" action="/assign">
-        <select name="user">
+<div class="container">
+    <h6 class="display-6 text-muted">assign to different agent</h6>
+    <form method="POST" action="/assign" class="form-inline">
+        <select name="user" class="form-control mr-3">
             {% for email, user in users.items() %}
             <option value="{{email}}">{{user}}</option>
             {% endfor %}
-
         </select>
         <input type="hidden" value="{{ case }}" name="case" />
-        <input type="submit" value="assign" class="btn btn-info">
+        <input type="submit" value="assign" class="btn btn-info" />
 
     </form>
-</di>
+</div>
 
 {% endblock %}
 
