Fix bug client dropdown in example route

--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -5,20 +5,22 @@
 <p>
     This is the demo app
     <em>for</em>
-    <a href="https://pluralsight.com">OCM Tracker</a>
+    <a href="#">OCM Tracker</a>
 </p>
-<div>
-    <h2>About</h2>
-    <p>A small business offering Civil Engineering services. They have 15- 20 clients of different sizes.
-        It employs 15-20 employees, 8 of them are Civil engineers while 6 works in the field. The
-        Engineers work in the office on data analysis and calculations and the workers in the field use
-        that information to perform different tasks. The workload is tracked and assigned using SS and
-        several operations tasks/communications are done via email threads. The company is unable to
-        easily keep track of projects due dates, resources bottlenecks or even employee
-        efficiencies/productivity. The team manager spends the majority of the time following up on
-        different tasks as well as resource management. The company is growing and the current manual
-        processes are not sustainable nor are they efficient. </p>
-    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+<div class="container mt-3">
+    <div class="jumbotron">
+        <h2>About</h2>
+        <p>A small business offering Civil Engineering services. They have 15- 20 clients of different sizes.
+            It employs 15-20 employees, 8 of them are Civil engineers while 6 works in the field. The
+            Engineers work in the office on data analysis and calculations and the workers in the field use
+            that information to perform different tasks. The workload is tracked and assigned using SS and
+            several operations tasks/communications are done via email threads. The company is unable to
+            easily keep track of projects due dates, resources bottlenecks or even employee
+            efficiencies/productivity. The team manager spends the majority of the time following up on
+            different tasks as well as resource management. The company is growing and the current manual
+            processes are not sustainable nor are they efficient. </p>
+        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+    </div>
 </div>
 
 
