--- a/tracker/templates/example.html
+++ b/tracker/templates/example.html
@@ -6,7 +6,7 @@
         <div class="col-2"></div>
         <div class="col-8">
 
-<select name="client" id="client"  >
+<select name="client" id="client"  class="form-control mb-3">
     {% for client in clients %}
     <option value="{{client}}" {% if client == selected %} selected="{{ selected }}" {% endif %}>{{client}}</option>
     {% endfor %}
@@ -33,15 +33,14 @@
 
 
 
-<!--<script>-->
-<!--    let select_client = document.getElementById('client');-->
-<!--    select_client.onchange = function(){-->
-<!--        var client = select_client.value;-->
-<!--&lt;!&ndash;        window.location = "{{ url_for('projects.example', name='Comcast') }}";&ndash;&gt;-->
-<!--        window.location = "http://localhost:5000/example" +"/"+client;-->
+<script>
+    let select_client = document.getElementById('client');
+    select_client.onchange = function(){
+        var client = select_client.value;
+        window.location = "http://localhost:5000/example" +"/"+client;
 
-<!--    }-->
-<!--</script>-->
+    }
+</script>
 
         </div>
         <div class="col-2"></div>
