--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -2,8 +2,22 @@
 {% block title %} All Projects {% endblock %}
 {% block content %}
 
-<a href="{{ url_for('projects.add_project') }}"> <button class="btn btn-info">Add Project</button></a>
-<br><br>
+<div class="container">
+    <div class="row">
+        <div class="col-9">
+
+            <a href="{{ url_for('projects.add_project') }}">
+                <button class="btn btn-info">Add Project</button>
+            </a>
+            <div class="container">
+                <form id="client-form" action="{{ url_for('projects.add_client') }}" method="post"
+                      enctype="multipart/form-data">
+                    <input class="form-control-file" type="file" name="file" multiple>
+                    <input type="submit" value="Add Client" class="btn btn-success">
+                </form>
+            </div>
+
+            <br><br>
 <table class="table table-dark table-bordered" >
     <tr>
         <th>Client</th>
@@ -13,7 +27,7 @@
     {% for project in all_projects %}
     <tr>
         <td>{{ project['client'] }}</td>
-        <td><a href="{{ url_for('projects.project', case=project['Project #']) }}"> {{ project['Project #'] }}</a></td>
+        <td><a href="{{ url_for('projects.project', case=project['project']) }}"> {{ project['project'] }}</a></td>
         <td> {{ project['created_at'].strftime('%m/%d/%Y %H:%M:%S') }}</td>
         <td><a href="{{ url_for('projects.del_project', case=project['case'])}}"> delete</a>   <!--  del_project/case -->
         </td>
@@ -40,6 +54,23 @@
                 </ul>
             </nav>
         </div>
+        </div>
+        <div class="col-3">
+
+            <h6>Projects Summary</h6>
+            <ul class="list-group">
+                 {% for k, v in pcount.items() %}
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    {{ k }}
+                    <span class="badge badge-primary badge-pill">{{ v }}</span>
+                </li>
+                {% endfor %}
+
+            </ul>
+        </div>
+    </div>
+</div>
+
 
 {% endblock %}
 
