--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -9,13 +9,13 @@
             <a href="{{ url_for('projects.add_project') }}">
                 <button class="btn btn-info">Add Project</button>
             </a>
-            <div class="container">
-                <form id="client-form" action="{{ url_for('projects.add_client') }}" method="post"
-                      enctype="multipart/form-data">
-                    <input class="form-control-file" type="file" name="file" multiple>
-                    <input type="submit" value="Add Client" class="btn btn-success">
-                </form>
-            </div>
+<!--            <div class="container">-->
+<!--                <form id="client-form" action="{{ url_for('projects.add_client') }}" method="post"-->
+<!--                      enctype="multipart/form-data">-->
+<!--                    <input class="form-control-file" type="file" name="file" multiple>-->
+<!--                    <input type="submit" value="Add Client" class="btn btn-success">-->
+<!--                </form>-->
+<!--            </div>-->
 
             <br><br>
 <table class="table table-dark table-bordered" >
@@ -61,7 +61,8 @@
             <ul class="list-group">
                  {% for k, v in pcount.items() %}
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                    {{ k }}
+                    <a href="{{ url_for('projects.projects_by_client', client_name=k) }}">{{ k }}</a>
+
                     <span class="badge badge-primary badge-pill">{{ v }}</span>
                 </li>
                 {% endfor %}
