Added back button

--- a/tracker/templates/update_project.html
+++ b/tracker/templates/update_project.html
@@ -31,7 +31,10 @@
         </div>
 
         <div class="col-4">
-        <p>Please update ... replace this</p>
+            <a href="{{ url_for('projects.project', case=project_number) }}">
+                <span>&laquo;</span>
+                <span>Back</span>
+            </a>
         </div>
     </div>
 </div>
