--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -7,7 +7,7 @@
         <div class="col-9">
 
             <div class="container">
-                <a href="{{ url_for('projects.add_project') }}">
+                <a href="{{ url_for('projects.example') }}">
                     <button class="btn btn-info">Add Project</button>
                 </a>
 
