--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -43,10 +43,10 @@
                         <span class="sr-only">Previous</span>
                     </a></li>
 
-                    {% for i in range(begin,end+1, 1) %}
+                    {% for i in limits %}
                     <li class="page-item {% if page == i %} active {% endif %}"><a class="page-link" href="{{ url_for('projects.get_projects', page=i) }}">{{ i }}</a></li>
                     {% endfor %}
-                    <li class="page-item {% if (begin+2) == end %} disabled {% endif %}"><a class="page-link" href="{{ url_for('projects.get_projects', page=(page+1)) }}" aria-label="Next">
+                    <li class="page-item {% if (page) == end %} disabled {% endif %}"><a class="page-link" href="{{ url_for('projects.get_projects', page=(page+1)) }}" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                     </a></li>
