--- a/tracker/templates/add_project.html
+++ b/tracker/templates/add_project.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-2"></div>
-        <div class="col-6">
+        <div class="col-6 mt-4">
 
 <select name="client" id="client"  class="form-control mb-3">
     {% for client in clients %}
