--- a/tracker/templates/careers.html
+++ b/tracker/templates/careers.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% set active_page = 'careers' %}
+{% block title %} Careers {% endblock %}
 {% block content %}
     <h1>Careers Page</h1>
 
