--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = 'home' %}
 {% block title %} All Projects {% endblock %}
 {% block content %}
 <h1>Welcome to OCM Tracker!</h1>
