--- a/tracker/templates/login.html
+++ b/tracker/templates/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = 'login' %}
 {% block content %}
 
 <div class="container">
@@ -6,7 +7,7 @@
         <div class="col-2"></div>
         <div class="col-8">
 
-    <div class="content-section">
+    <div class="content-section mt-4" >
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="content-section">
