--- a/tracker/templates/add_project.html
+++ b/tracker/templates/add_project.html
@@ -22,11 +22,13 @@
                     <div class="form-group">
                         {{ field.label(class="form-control-label") }}
                         {{ field(class="form-control form-control-lg") }}
-
-                    {% else %}
-                    {{ field(class="form-control form-control-lg btn btn-success") }}
-                    {% endif %}
                     </div>
+                    {% else %}
+                    <div class="form-group">
+                        {{ field(class="form-control form-control-lg btn btn-info") }}
+                    </div>
+                    {% endif %}
+
 
                     {% endfor %}
 
@@ -46,11 +48,11 @@
 
         </div>
         <div class="col-4">
-            <div class="container">
+            <div class="container mt-4">
                 <form id="client-form" action="{{ url_for('projects.add_client', name=selected) }}" method="post"
                       enctype="multipart/form-data">
                     <input class="form-control-file" type="file" name="file" multiple>
-                    <input type="submit" value="Add Client" class="btn btn-success mt-2">
+                    <input type="submit" value="Add Client" class="btn btn-primary mt-2">
                 </form>
             </div>
         </div>
