Add home page text and list of services

--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -30,8 +30,13 @@
                     <div class="btn-group">
                         <div class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">Services</div>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="{{ url_for('main.services') }}">Service 1</a>
-                            <a class="dropdown-item" href="#">Service 2</a>
+                            <a class="dropdown-item" href="{{ url_for('main.services') }}">Loading analysis</a>
+                            <a class="dropdown-item" href="#">Aerial make ready review and solutions</a>
+                            <a class="dropdown-item" href="#"> CAD services</a>
+                            <a class="dropdown-item" href="#">GIS data entry and management</a>
+                            <a class="dropdown-item" href="#">Work order designs</a>
+                            <a class="dropdown-item" href="#"> Permitting preparation services</a>
+                            <a class="dropdown-item" href="#"> Consulting </a>
                         </div>
                     </div>
 
