--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -2,24 +2,21 @@
 {% set active_page = 'home' %}
 {% block title %} All Projects {% endblock %}
 {% block content %}
-<h1>Welcome to OCM Tracker!</h1>
-<p>
+<p class="mt-5">
     This is the demo app
     <em>for</em>
-    <a href="#">OCM Tracker</a>
+    <a href="#">Conexus Solutions</a>
 </p>
 <div class="container mt-3">
     <div class="jumbotron">
-        <h2>About</h2>
-        <p>A small business offering Civil Engineering services. They have 15- 20 clients of different sizes.
-            It employs 15-20 employees, 8 of them are Civil engineers while 6 works in the field. The
-            Engineers work in the office on data analysis and calculations and the workers in the field use
-            that information to perform different tasks. The workload is tracked and assigned using SS and
-            several operations tasks/communications are done via email threads. The company is unable to
-            easily keep track of projects due dates, resources bottlenecks or even employee
-            efficiencies/productivity. The team manager spends the majority of the time following up on
-            different tasks as well as resource management. The company is growing and the current manual
-            processes are not sustainable nor are they efficient. </p>
+        <h2>Overview</h2>
+        <p>
+         Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
+            We specialize in assisting communication companies and electric utilities with all facets of the Joint Use process. We provide customer
+            focused solutions in an accurate and timely manner. Our team focuses on providing efficient, economical, and accurate solutions at every
+            step of the design process. Our attention to detail and ability to adapt and meet the specific customer needs has helped to reduce cost
+            and increase speed to market for the end customer. We look forward to working with you to see how we can best tailor our services to your needs.
+        </p>
         <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
     </div>
 </div>
