--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -20,6 +20,11 @@
         <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
     </div>
 </div>
+<hr>
+
+<footer>
+    <p>&copy; Conexus Solutions {{ year }}</p>
+</footer>
 
 
 {% endblock %}
