update in footer

--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -17,7 +17,7 @@
 <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-secondary fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-4" href="/">Tracker</a>
+            <a class="navbar-brand mr-4" href="/">Conexus</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,27 @@
     {% endwith %}
     {% block content %}
     {% endblock %}
+<hr>
 
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <p>&copy; Conexus Solutions {{ year }}</p>
+                </div>
+                <div class="col-md-6">
+
+                </div>
+                <div class="col-md-3">
+                    <h4>Contact</h4>
+                    <ul>
+                        <li>+31760536372</li>
+                        <li>tr@conexus.com</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
